# benwu

./: .ctags  .gdbinit  .gitignore  .gitmodules  .screenrc  .tcshrc  .vimrc
.screen/: X11  checkmail  cpuusage  encrypt.py  gcalendar  host  idle  load  mail  memino  postcmd  ran
.tcsh/: .tcsh_aliases~  cms  gdiff  mythisroot.csh  newBrowser.C  setup614  setup614~  setupdev  setupdev~  tb  tcsh_aliases  tcsh_aliases~  tcsh_bindkey  tcsh_cdf  tcsh_cdf~  tcsh_color  tcsh_complete  tcsh_complete~  tcsh_set  tcsh_set~  vitex
.tcsh/.vi_backup/: mythisroot.csh~  setup614~  setupdev~  tcsh_cdf~  tcsh_set~
.vim/: vi.elog
.vim/autoload/: recover.vim
.vim/bundle/R/vimcom/: DESCRIPTION  MD5  NAMESPACE  NEWS  README  configure  configure.ac
.vim/bundle/R/vimcom/R/: specialfuns.R  vimbol.R  vimcom.R  vimhelp.R  viminterlace.R  vimprint.R  vimsrcdir.R
.vim/bundle/R/vimcom/man/: etags2ctags.Rd  vim.bol.Rd  vim.help.Rd  vim.interlace.rmd.Rd  vim.interlace.rnoweb.Rd  vim.interlace.rrst.Rd  vim.list.args.Rd  vim.names.Rd  vim.openpdf.Rd  vim.print.Rd  vim.srcdir.Rd  vimcom-package.Rd
.vim/bundle/R/vimcom/src/: Makevars.in  vimcom.c  vimremote.c  vimremote.h  vimthings.c  vimthings.h
.vim/doc/: tags
.vim/ftdetect/: boxes.vim
.vim/ftplugin/: bib_mine.vim  boost_tags  cpp_mine.vim  cpp_tags  csh_mine.vim  tcl.vim  tex_mine.vim
.vim/plugin/: BWVim.vim  BWtab.vim  DirDiff.vim  a.vim  ambicompletion.vim  blog.vim.bk  calendar.vim  marksbrowser.vim  repmo.vim  showmarks.vim  taglist.vim  toggle.vim
.vim/spell/: en.utf-8.add  en.utf-8.add.spl
.vim/syntax/: boxes.vim  (+2 more)
(+216 files in other folders)
